# ttt_drift

./: .gitignore  Drifting-Model-paper-summary.md  LICENSE  README.md  SERVER_SETUP.md  VLA-TTT-调研笔记.md  h20_fail.md  idea-test-time-drift-toward-language-manifold.md  pyproject.toml  requirements.txt  sweep1_constant_w_results.md
assets/: dataset_index.csv
drifting_code/: .gitignore  README.md  drift_loss.py  inference.py  main.py  memory_bank.py  requirements.txt  train.py  train_mae.py
drifting_code/configs/mae/: latent_640.yaml  latent_ablation_256.yaml  pixel_640.yaml
drifting_code/dataset/: dataset.py  latent.py  vae.py
drifting_code/models/: convnext.py  generator.py  hf.py  mae_model.py
drifting_code/notebooks/: inference_demo.ipynb
drifting_code/utils/: __init__.py  ckpt_util.py  env.py  fid_util.py  hsdp_util.py  init_util.py  logging.py  misc.py  model_builder.py
drifting_code/utils/jax_fid/: cvt.py  fid.py  inception.py  precision_recall.py  resize.py  utils.py
hy_vla/: __init__.py  configuration_hy_vla.py  modeling_dual_tower.py  modeling_hy_vla.py  space_time_attention.py  train.py  ttt_blend.py
hy_vla/config/: base.yaml
hy_vla/config/dataset/: robotwin_hdf5.yaml  umi_lance.yaml
hy_vla/data/: hdf5_dataset.py  lance_dataset.py  vla_dataset.py
hy_vla/hunyuan_vl_mot/: __init__.py  configuration_hunyuan_vl_mot.py  image_processing_hunyuan_vl_mot.py  modeling_hunyuan_vl_mot.py  modular_hunyuan_vl_mot.py  processing_hunyuan_vl_mot.py  video_processing_hunyuan_vl_mot.py
hy_vla/utils/: image_corrupt.py  logger.py  transform_utils.py
results/: step0_mask_diag_seed0_dummy.jsonl  step1_blend.jsonl
robotwin_eval/: __init__.py  deploy_policy.py  deploy_policy.yml  eval.sh  policy_wrapper.py  transforms.py
scripts/: compute_norm_hdf5.py  compute_norm_lance.py  diag_step0_mask.py  eval_robotwin_full.sh  eval_robotwin_test.sh  eval_sweep_w.sh  inspect_curobo_api.py  patch_robotwin_curobo_no_graph.py  patch_robotwin_curobo_v2_api.py  patch_robotwin_skip_expert_check.py  patch_robotwin_test_num.py  quick_start.py  setup_robotwin_hy26_stack.sh  step1_velocity_blend.py  train_robotwin_umi.sh  train_robotwin_vlm.sh  train_table_vlm.sh  train_umi_vlm.sh  vis_umi_episode.py
